# image-data

./: .env.sample  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_etl.py
alembic/: env.py
alembic/versions/: 65e4f0ce802e_initial_migration_with_table_images.py
app/: main.py  settings.py  utils.py
app/api/v1/: image_api.py
app/db/: models.py  session.py
app/schemas/: image_schema.py
