[tool.poetry]
name = "image-data"
version = "1.0.0"
description = ""
authors = ["Rabin Lama Dong"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
fastapi = "^0.115.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
prometheus-fastapi-instrumentator = "^7.0.0"
alembic = "^1.13.3"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
